[Blink] Correctly derive context when no property changed

There was a mistake in PaintPropertyTreeBuilder::UpdateClipPathClip()
to early exit when properties didn't change. However in that case we
still have to update the context for descendants to inherit. This CL
removed the early exit.

BUG=836127

Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I38b229b86bd9c2106ac32bf54d520d39cb892e0c
Reviewed-on: https://chromium-review.googlesource.com/1038705
Reviewed-by: Xianzhu Wang <wangxianzhu@chromium.org>
Commit-Queue: Tien-Ren Chen <trchen@chromium.org>
Cr-Commit-Position: refs/heads/master@{#555275}
Former-commit-id: 556cf9a4d9636b05ec0062c65d212f5f2fe8c771